# fastscaff

./: README.md  README_CN.md  pyproject.toml
fastscaff/: cli.py  generator.py  introspector.py  model_generator.py
fastscaff/templates/app/: main.py
fastscaff/templates/app/api/v1/: router.py
fastscaff/templates/app/api/v1/endpoints/: auth.py  auth.py.jinja2  health.py  users.py
fastscaff/templates/app/core/: __init__.py  database_sqlalchemy.py  database_sqlalchemy.py.jinja2  database_tortoise.py  lifespan.py.jinja2  logger.py.jinja2  rbac.py  redis.py  security.py  singleton.py
fastscaff/templates/app/exceptions/: __init__.py  base.py  handlers.py
fastscaff/templates/app/middleware/: __init__.py  cors.py  jwt.py  logging.py  security.py  sign.py  tracing.py
fastscaff/templates/app/models/: base_sqlalchemy.py  base_tortoise.py  user_sqlalchemy.py  user_tortoise.py
fastscaff/templates/app/repositories/: base_sqlalchemy.py.jinja2  base_tortoise.py  user_sqlalchemy.py  user_tortoise.py
fastscaff/templates/app/schemas/: __init__.py  auth.py  base.py  user.py
fastscaff/templates/app/services/: __init___sqlalchemy.py.jinja2  __init___tortoise.py  auth_sqlalchemy.py.jinja2  auth_tortoise.py  user_sqlalchemy.py.jinja2  user_tortoise.py.jinja2
fastscaff/templates/app/utils/: __init__.py  auth.py  cache.py  rate_limiter.py  snowflake.py  sort_helper.py.jinja2
fastscaff/templates/base/: Dockerfile  Makefile  gitignore  pre-commit-config.yaml
fastscaff/templates/tests/: conftest.py
fastscaff/templates/tests/api/: test_health.py
